coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_cjk.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 0, 60, 4)"
---
▸ /帮 助      显 示 帮 助 信 息
