coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_column_alignment.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 0, 60, 6)"
---
▸ /m               model                                    
  /clear           clear chat                               
  /commit-push-pr  commit + push + PR
