coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_selected_middle.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 1, 50, 6)"
---
  /help     Show help                             
▸ /clear    Clear chat                            
  /config   Settings
