coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_short.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 0, 50, 6)"
---
▸ /clear    Clear chat                            
  /config   Settings
