coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__suggestion_popup__tests__suggestion_popup_unified_mixed.snap
---
source: app/tui/src/widgets/suggestion_popup.test.rs
expression: "render_popup(&items, 0, 60, 6)"
---
▸ * Plan (agent)     Software architect agent               
  * Explore (agent)  Fast read-only search                  
  + src/lib.rs                                              
  + docs/
